tests/models/snapshots/can_update_site_url.snap
---
source: tests/models/site_settings.rs
expression: updated_settings
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    site_url: "https://example.com",
}
