tests/models/snapshots/should_allow_both_http_and_https.snap
---
source: tests/models/site_settings.rs
expression: https_settings
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    site_url: "https://example.com",
}
