tests/models/snapshots/should_maintain_singleton_pattern.snap
---
source: tests/models/site_settings.rs
expression: settings2
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    site_url: "http://localhost:5150",
}
