tests/models/snapshots/should_normalize_url_removing_trailing_slash.snap
---
source: tests/models/site_settings.rs
expression: settings
---
Model {
    created_at: DATE,
    updated_at: DATE,
    id: ID
    site_url: "https://example.com",
}
